bug 30692 - skip inner table cell's block as percentage base and use cell instead. r=troy